--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   stop_watch_timer: ^1.3.1
   intl: ^0.17.0
   wakelock: ^0.5.6
+  flutter_search_bar: ^3.0.0-dev.1
 
 
 dev_dependencies:
