--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   wakelock: ^0.5.6
   flutter_search_bar: ^3.0.0-dev.1
+  flutter_rating_bar: ^4.0.0
 
 
 dev_dependencies:
