--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+7
+version: 1.0.1+8
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -34,6 +34,7 @@ dependencies:
   wakelock: ^0.5.6
   flutter_search_bar: ^3.0.0-dev.1
   flutter_rating_bar: ^4.0.0
+  share_plus: ^4.0.10
 
 
 dev_dependencies:
