--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ app.*.map.json
 # Local configuration file (sdk path, etc)
 local.properties
 key.properties
+
+# firebase
+firebase.exe
+
+# Google services
+google-services.json
