--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   share_plus: ^4.0.10
   firebase_core: ^2.13.0
+  firebase_crashlytics: ^3.3.1
 
 
 dev_dependencies:
