--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_crashlytics: ^3.3.1
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.1
+  cloud_firestore: ^4.7.1
 
 
 dev_dependencies:
