--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,17 @@ jobs:
         with:
           name: Build Artifacts
           path: build/app/outputs/bundle/release/
+
+      - name: Upload Android Release to Play Store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+          packageName: com.hawkiesza.coffee_journal
+          releaseFiles: app/build/outputs/bundle/release/app-release.aab
+          track: internal
+          status: inProgress
+          userFraction: 1.0
+          whatsNewDirectory: distribution/whatsnew
+          mappingFile: app/build/outputs/mapping/release/mapping.txt
+          debugSymbols: app/intermediates/merged_native_libs/release/out/lib
+
